--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,21 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+Kbuild
 
 # Vim swap files
 *.swp
+
+# CMake files
+*/cmake-build-debug
+**/CMakeCache.txt
+**/cmake_install.cmake
+**/install_manifest.txt
+**/CMakeFiles/
+**/CTestTestfile.cmake
+**/Makefile
+**/*.cbp
+**/CMakeScripts
+
+# Build files
+build/*
